Sun Nov 25 13:45:45 EST 2001	Brian Bruns <camber@ais.org>

	* include/tds.h.in: add TDS_STR_CLCHARSET define and all client_charset to
	the TDSCONFIG structure.
	* src/tds/mem.c(tds_free_config): free client_charset 
	* src/tds/mem.c(tds_free_socket): call tds_iconv_close()
	* src/tds/config.c: check for 'client charset' in freetds.conf
	* src/tds/iconv.c: set tds->use_iconv on successful loading of iconv 
	routines
	* src/tds/login.c(tds_connect): call tds_iconv_open() if client_charset is
	* doc/userguide.sgml: add 'client charset' description to freetds.conf 
	table

Thu Nov 22 18:26:34 EST 2001	Brian Bruns <camber@ais.org>

	* src/dblib/dblib.c: modify DBROWS to check for validity of resinfo

Wed Nov 21 17:15:23 2001  James Cameron  <quozl@us.netrek.org>

	* .cvsignore: remove all generated files from CVS.
	* doc/faq.html: add pointer to instructions for building from CVS
	after a checkout.

Tue Nov 20 12:44:13 2001  James Cameron  <quozl@us.netrek.org>

	* autogen.sh: new file to perform package configuration from 'make
	maintainer-clean' state, copied from Glade.

Tue Nov 20 12:31:25 2001  James Cameron  <quozl@us.netrek.org>

	* INSTALL.CVS: new file to explain process of building from CVS.

Tue Nov 20 11:48:26 2001  James Cameron  <quozl@us.netrek.org>

	* doc/userguide.sgml: adjust build instructions; gmake does not
	work on some Linux systems, as GNU make is installed as make not
	gmake.  Ensure that the instructions match against INSTALL.  Fix
	name of GNU Project and software development tools therein.

Tue Nov 20 11:41:40 2001  James Cameron  <quozl@us.netrek.org>

	* INSTALL: simplify installation instructions in favour of user
	guide, fix URL to guide.

Tue Nov 20 11:34:54 2001  James Cameron  <quozl@us.netrek.org>

	* README, doc/faq.html: fix User Guide URL

Tue Nov 13 23:41:17 EST 2001	Brian Bruns <camber@ais.org>

	* src/dblib/dbutil.c: fix call to tds_reset_msg after libtds change.
	
Tue Nov 13 16:04:54 2001  James Cameron  <quozl@us.netrek.org>