@@ -21,7 +21,7 @@
 #include "tds.h"
 #include "tdsutil.h"
 
-static char  software_version[]   = "$Id: token.c,v 1.8 2001/11/07 21:01:15 mlilback Exp $";
+static char  software_version[]   = "$Id: token.c,v 1.9 2001/11/26 00:04:17 vorlon Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
@@ -998,7 +998,7 @@ int tmp = tds_get_smallint(tds);
 int tds_client_msg(TDSSOCKET *tds, int msgnum, int level, int state, int line, char *message)
 {
 int ret;
-        if(tds->parent) {
+        if(tds->parent && g_tds_err_handler) {
 		tds->msg_info->msg_number=msgnum;
         	tds->msg_info->msg_level=level; /* severity? */
         	tds->msg_info->msg_state=state;
@@ -1205,8 +1205,10 @@ int len_sqlstate;
 	** the "parent" structure.
 	*/
 
-	if(tds->parent) {
-		if (tds->msg_info->priv_msg_type) 
+	if(tds->parent && (tds->msg_info->priv_msg_type
+	                   ? g_tds_err_handler : g_tds_msg_handler))
+	{
+		if (tds->msg_info->priv_msg_type)
 			g_tds_err_handler(tds);
 		else
 			g_tds_msg_handler(tds);
